crates/ty_python_semantic/resources/mdtest/snapshots/liskov.md_-_The_Liskov_Substitut…_-_The_entire_class_hie…_(5e8fca10d966c36e).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: liskov.md - The Liskov Substitution Principle - The entire class hierarchy is checked
mdtest path: crates/ty_python_semantic/resources/mdtest/liskov.md
---

# Python source files

## stub.pyi

```
 1 | from typing import Any, overload
 2 | from typing_extensions import Self
 3 | 
 4 | class Grandparent:
 5 |     def method(self, x: int) -> None: ...
 6 | 
 7 | class Parent(Grandparent):
 8 |     def method(self, x: str) -> None: ...  # error: [invalid-method-override]
 9 | 
10 | class Child(Parent):
11 |     # compatible with the signature of `Parent.method`, but not with `Grandparent.method`.
12 |     # However, since `Parent.method` already violates LSP with `Grandparent.method`,
13 |     # we don't report the same violation for `Child` -- it's inherited from `Parent`.
14 |     def method(self, x: str) -> None: ...
15 | 
16 | class OtherChild(Parent):
17 |     # compatible with the signature of `Grandparent.method`, but not with `Parent.method`:
18 |     def method(self, x: int) -> None: ...  # error: [invalid-method-override]
19 | 
20 | class ChildWithNewViolation(Parent):
21 |     # incompatible with BOTH `Parent.method` (str) and `Grandparent.method` (int).
22 |     # We report the violation against the immediate parent (`Parent`), not the grandparent.
23 |     def method(self, x: bytes) -> None: ...  # error: [invalid-method-override]
24 | 
25 | class GrandparentWithReturnType:
26 |     def method(self) -> int: ...
27 | 
28 | class ParentWithReturnType(GrandparentWithReturnType):
29 |     def method(self) -> str: ...  # error: [invalid-method-override]
30 | 
31 | class ChildWithReturnType(ParentWithReturnType):
32 |     # Returns `int` again -- compatible with `GrandparentWithReturnType.method`,
33 |     # but not with `ParentWithReturnType.method`. We report against the immediate parent.
34 |     def method(self) -> int: ...  # error: [invalid-method-override]
35 | 
36 | class GrandparentWithInheritedViolation:
37 |     def method(self, x: Any) -> Self: ...
38 | 
39 | class ParentWithInheritedViolation(GrandparentWithInheritedViolation):
40 |     def method(self, x: int | Self) -> int: ...  # error: [invalid-method-override]
41 | 
42 | class ChildWithExtraOverload(ParentWithInheritedViolation):
43 |     # `ParentWithInheritedViolation.method` already violates LSP with
44 |     # `GrandparentWithInheritedViolation.method`, but this child does not keep the same
45 |     # method type: it adds a new overload while remaining compatible with the immediate
46 |     # parent. We should therefore still report the violation on the child.
47 |     @overload
48 |     def method(self, x: int | Self) -> int: ...
49 |     @overload
50 |     def method(self, x: bytes) -> bytes: ...  # error: [invalid-method-override]
51 | 
52 | class GradualParent(Grandparent):
53 |     def method(self, x: Any) -> None: ...
54 | 
55 | class ThirdChild(GradualParent):
56 |     # `GradualParent.method` is compatible with the signature of `Grandparent.method`,
57 |     # and `ThirdChild.method` is compatible with the signature of `GradualParent.method`,
58 |     # but `ThirdChild.method` is not compatible with the signature of `Grandparent.method`
59 |     def method(self, x: str) -> None: ...  # error: [invalid-method-override]
```

## other_stub.pyi

```
 1 | class A:
 2 |     def get(self, default): ...
 3 | 
 4 | class B(A):
 5 |     def get(self, default, /): ...  # error: [invalid-method-override]
 6 | 
 7 | get = 56
 8 | 
 9 | class C(B):
10 |     # `get` appears in the symbol table of `C`,
11 |     # but that doesn't confuse our diagnostic...
12 |     foo = get
13 | 
14 | class D(C):
15 |     # compatible with `C.get` and `B.get`, but not with `A.get`.
16 |     # Since `B.get` already violates LSP with `A.get`, we don't report for `D`.
17 |     def get(self, my_default): ...
```

## mdtest_snippet.pyi

```
1 | class C(list[int]):
2 |     def __getitem__(self, key): ...
```

# Diagnostics

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/stub.pyi:5:9
   |
 4 | class Grandparent:
 5 |     def method(self, x: int) -> None: ...
   |         ---------------------------- `Grandparent.method` defined here
 6 |
 7 | class Parent(Grandparent):
 8 |     def method(self, x: str) -> None: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Grandparent.method`
 9 |
10 | class Child(Parent):
   |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/stub.pyi:18:9
   |
16 | class OtherChild(Parent):
17 |     # compatible with the signature of `Grandparent.method`, but not with `Parent.method`:
18 |     def method(self, x: int) -> None: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Parent.method`
19 |
20 | class ChildWithNewViolation(Parent):
   |
  ::: src/stub.pyi:8:9
   |
 7 | class Parent(Grandparent):
 8 |     def method(self, x: str) -> None: ...  # error: [invalid-method-override]
   |         ---------------------------- `Parent.method` defined here
 9 |
10 | class Child(Parent):
   |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/stub.pyi:23:9
   |
21 |     # incompatible with BOTH `Parent.method` (str) and `Grandparent.method` (int).
22 |     # We report the violation against the immediate parent (`Parent`), not the grandparent.
23 |     def method(self, x: bytes) -> None: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Parent.method`
24 |
25 | class GrandparentWithReturnType:
   |
  ::: src/stub.pyi:8:9
   |
 7 | class Parent(Grandparent):
 8 |     def method(self, x: str) -> None: ...  # error: [invalid-method-override]
   |         ---------------------------- `Parent.method` defined here
 9 |
10 | class Child(Parent):
   |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/stub.pyi:26:9
   |
25 | class GrandparentWithReturnType:
26 |     def method(self) -> int: ...
   |         ------------------- `GrandparentWithReturnType.method` defined here
27 |
28 | class ParentWithReturnType(GrandparentWithReturnType):
29 |     def method(self) -> str: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `GrandparentWithReturnType.method`
30 |
31 | class ChildWithReturnType(ParentWithReturnType):
   |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/stub.pyi:29:9
   |
28 | class ParentWithReturnType(GrandparentWithReturnType):
29 |     def method(self) -> str: ...  # error: [invalid-method-override]
   |         ------------------- `ParentWithReturnType.method` defined here
30 |
31 | class ChildWithReturnType(ParentWithReturnType):
32 |     # Returns `int` again -- compatible with `GrandparentWithReturnType.method`,
33 |     # but not with `ParentWithReturnType.method`. We report against the immediate parent.
34 |     def method(self) -> int: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `ParentWithReturnType.method`
35 |
36 | class GrandparentWithInheritedViolation:
   |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/stub.pyi:37:9
   |
36 | class GrandparentWithInheritedViolation:
37 |     def method(self, x: Any) -> Self: ...
   |         ---------------------------- `GrandparentWithInheritedViolation.method` defined here
38 |
39 | class ParentWithInheritedViolation(GrandparentWithInheritedViolation):
40 |     def method(self, x: int | Self) -> int: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `GrandparentWithInheritedViolation.method`
41 |
42 | class ChildWithExtraOverload(ParentWithInheritedViolation):
   |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/stub.pyi:50:9
   |
48 |     def method(self, x: int | Self) -> int: ...
49 |     @overload
50 |     def method(self, x: bytes) -> bytes: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `GrandparentWithInheritedViolation.method`
51 |
52 | class GradualParent(Grandparent):
   |
  ::: src/stub.pyi:37:9
   |
36 | class GrandparentWithInheritedViolation:
37 |     def method(self, x: Any) -> Self: ...
   |         ---------------------------- `GrandparentWithInheritedViolation.method` defined here
38 |
39 | class ParentWithInheritedViolation(GrandparentWithInheritedViolation):
   |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/stub.pyi:59:9
   |
57 |     # and `ThirdChild.method` is compatible with the signature of `GradualParent.method`,
58 |     # but `ThirdChild.method` is not compatible with the signature of `Grandparent.method`
59 |     def method(self, x: str) -> None: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Grandparent.method`
   |
  ::: src/stub.pyi:5:9
   |
 4 | class Grandparent:
 5 |     def method(self, x: int) -> None: ...
   |         ---------------------------- `Grandparent.method` defined here
 6 |
 7 | class Parent(Grandparent):
   |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `get`
 --> src/other_stub.pyi:2:9
  |
1 | class A:
2 |     def get(self, default): ...
  |         ------------------ `A.get` defined here
3 |
4 | class B(A):
5 |     def get(self, default, /): ...  # error: [invalid-method-override]
  |         ^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `A.get`
6 |
7 | get = 56
  |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```
